# ctfgpt

./: .gitignore  README.md  config.yaml  pyproject.toml  setup_keys.ps1
ctfgpt/: __init__.py  agent.py  blackboard.py  classifier.py  cli.py  config.py  mcp_client.py  planner.py  rag.py  report.py  solver.py
ctfgpt/agents/: base_agent.py  exploit_agent.py  privesc_agent.py  recon_agent.py  router.py
ctfgpt/utils/: __init__.py  history.py  rich_output.py  safety.py
ingestion/: __init__.py  chunker.py  embedder.py  loader_github.py  loader_pdf.py  scraper_ctftime.py  scraper_hackingarticles.py  scraper_hacktricks.py
