[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctfgpt"
version = "0.1.0"
description = "AI-powered CTF assistant with RAG pipeline and Kali MCP integration"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "XploitMonk"},
]
readme = "README.md"
keywords = ["ctf", "security", "ai", "rag", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-text-splitters>=0.3",
    "langchain-groq>=0.2",
    "langchain-openai>=0.3",
    "langchain-chroma>=0.2",
    "langchain-huggingface>=0.1",
    "langgraph>=0.2",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
pdf = [
    "pdfplumber>=0.11",
    "PyPDF2>=3.0",
]

[project.scripts]
ctfgpt = "ctfgpt.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["ctfgpt", "ingestion"]

[tool.ruff]
target-version = "py311"
line-length = 100
